deployments/kubernetes/services/apigateway/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: payment-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      serviceAccountName: app
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: apigateway
          image: ghcr.io/__GHCR_OWNER__/microservice-payment-gateway-grpc/apigateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
            - containerPort: 8091
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
